# meson-gtk-sample

./: main.c  meson.build
subprojects/: .gitignore  adwaita-icon-theme.wrap  cairo.wrap  glib.wrap  gtk.wrap  harfbuzz.wrap  pango.wrap
